stable v1.4 add /skin and interface for making